cmake_minimum_required(VERSION 3.5)
PROJECT(lab)

SET(CMAKE_C_COMPTLER GCC)
add_definitions(-std=c++11)
find_package(Threads)
SET(CMAKE_CXX_FLAGS -pthread)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
aux_source_directory(${PROJECT_SOURCE_DIR}/src SRC_LIST)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
ADD_EXECUTABLE(lab ${SRC_LIST})
TARGET_LINK_LIBRARIES(lab  ${NETSIM_LIB})

